# mwa-vcs-localise

./: README.md  pyproject.toml
examples/: detections_0026.txt  detections_0452.txt  initial_detections_0026.txt  plot_0026.sh  plot_0452.sh  plot_layout_and_tab_example.sh  regularisation_example.sh
mwa_vcs_localise/: array_factor.py  make_tab_pattern.py  primary_beam.py  tab_localise.py  utils.py
src/mwa_vcs_localise/: array_factor.py  make_tab_pattern.py  primary_beam.py  stats.py  utils.py
statistics_tests/: explorations_abc.ipynb  explorations_seeKAT.ipynb
